force-app/main/default/objects/Visit_Evidence__c/Visit_Evidence__c.object-meta.xml
<CustomObject>
    <label>Visit Evidence</label>
    <pluralLabel>Visit Evidence</pluralLabel>
    <description>Visit Evidence</description>
    <nameField>
        <label>Visit Evidence Name</label>
        <type>AutoNumber</type>
        <displayFormat>EVD-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>