force-app/main/default/objects/Visit_Evidence__c/fields/Evidence_Type__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Type__c</fullName>
    <label>Evidence Type</label>
    <type>Picklist</type>
    <description>Evidence Type</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Photo</fullName>
                <default>true</default>
                <label>Photo</label>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>