force-app/main/default/objects/Visit_Evidence__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>Url</label>
    <type>Url</type>
    <description>Url</description>
</CustomField>